--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,10 @@
 
 .ui.grid>.column.app-navigation {
   padding: 0 !important;
+  background-image: url("./assets/img/coast.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  overflow-y: hidden;
 }
