--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,10 +1,5 @@
 .navigation-background {
-  background-image: url(../assets/img/coast.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  overflow-y: hidden;
+  height: 100% !important;
 }
 
 .ui.centered.grid.navigation-grid {
