--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,1 @@
-.ui.grid.container.app-container {
-  padding: 0 !important;
-  margin: 0 !important;
-  width: 100% !important;
-  height:100vh;
-}
-
-.ui.grid>.column.app-navigation {
-  padding: 0 !important;
-  background-image: url("./assets/img/coast.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  overflow-y: hidden;
-}
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap');
