--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -2,7 +2,7 @@
 
 .ui {
   &.header {
-    font-family: "Playfair Display", "Garamond", sans-serif !important;
+    font-family: Palatino, sans-serif !important;
     font-weight: 700;
 
     &.site-title {
